[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/BuildingList.gd" type="Script" id=1]
[ext_resource path="res://assets/InventoryTheme.tres" type="Theme" id=2]
[ext_resource path="res://src/BuildingListButton.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
tracks/0/type = "value"
tracks/0/path = NodePath(".:anchor_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -0.15 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:anchor_right")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.15, 0.0 ]
}

[node name="BuildingList" type="Control"]
anchor_left = -0.15
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.501961 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildingListButton" type="Button" parent="VBoxContainer"]
visible = false
margin_right = 153.0
margin_bottom = 27.0
text = "SAMPLE TEXT"
script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/out = SubResource( 1 )

[connection signal="item_pressed" from="VBoxContainer/BuildingListButton" to="." method="_on_BuildingListButton_item_pressed"]
[connection signal="pressed" from="VBoxContainer/BuildingListButton" to="VBoxContainer/BuildingListButton" method="_on_BuildingListButton_pressed"]
